# ure

./: .gitignore  Cargo.toml  README.md  tree.ure
data/: Cargo.toml
data/macros/: Cargo.toml
data/macros/src/: lib.rs
data/src/: component.rs  container.rs  data.rs  func.rs  group.rs  lib.rs  method.rs  resource.rs  system.rs
examples/: simple.rs  tutorial.rs
macros/src/: lib.rs
src/: app.rs  bank.rs  call.rs  data.rs  entity.rs  game.rs  gpu.rs  lib.rs  main.rs  render.rs  resource.rs  store.rs  sys.rs  tf.rs  timing.rs  two.rs
src/app/: input.rs  window.rs
src/game/: assets.rs  gui.rs  tf.rs  tree.rs
src/game/tf/: e2.rs  e3.rs
src/gpu/: 2d.wgsl  bind.rs  data.rs  instancing.rs  rendering.rs  two.rs  vertex.rs
src/gpu/two/: rendering.rs
src/render/: 2d.wgsl  _2d.rs  color.rs  gpu.rs
src/sys/: assets.rs  delete.rs  edit.rs  gpu.rs  gui.rs  input.rs  map.rs  rhai.rs  sdl.rs  tf.rs  tree.rs  window.rs
src/sys/gpu/: 2d.wgsl  render2d.rs  surfaces.rs
src/sys/gui/: layout.rs  render.rs
src/sys/sdl/: event.rs  window.rs
src/sys/tf/: e2.rs  tf3d.rs
ure/: Cargo.toml
ure/data/: Cargo.toml
ure/data/src/: component.rs  data.rs  func.rs  group.rs  lib.rs  resource.rs
ure/data/src/data/: bimap.rs  bitvec.rs  index.rs  shared.rs  single.rs  vec.rs
ure/examples/: tutorial.rs
ure/gpu/: Cargo.toml
ure/gpu/src/: data.rs  lib.rs
ure/src/: app.rs  gpu.rs  lib.rs  two.rs
ure/src/app/: input.rs
ure/src/two/: 2d.wgsl
ure_data/: Cargo.toml
ure_data/src/: components.rs  container.rs  containers.rs  glob.rs  group.rs  lib.rs  method.rs  resource.rs  signal.rs  signals.rs  system.rs  util.rs
