[package]
name = "ure"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1"
color = { version = "0", features = ["bytemuck"] }
facet = "0.28.1"
fontdue = "0"
glam = { version = "0", features = ["bytemuck"] }
ordered-float = "5"
parking_lot = "0"
paste = "1.0.15"
rand = "0"
raw-window-handle = "0"
rustc-hash = { version = "2", features = ["nightly"] }
slotmap = "1"
spin_sleep = "1"
winit = { version = "0", default-features = false, features = ["ahash", "bytemuck", "memmap2", "percent-encoding", "rwh_06", "wayland", "wayland-backend", "wayland-client", "wayland-dlopen", "wayland-protocols", "wayland-protocols-plasma",] }
ure-data = { path = "data" }

[features]
default = ["2d", "gui"]
2d = []
3d = []
gui = ["2d"]
